force-app/main/default/objects/Activity/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>YEAR(TODAY()) - YEAR(  Birthdate__c) - IF(MONTH(TODAY()) &lt; MONTH(  Birthdate__c), 1, IF(AND(MONTH(TODAY()) = MONTH(  Birthdate__c), DAY(TODAY()) &lt; DAY( Birthdate__c)), 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>