force-app/main/default/objects/Activity/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blood Test</fullName>
                <label>Blood Test Onsite</label>
            </value>
            <value>
                <fullName>Blood Test Offsite</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Scan</fullName>
            </value>
            <value>
                <fullName>Proceedure</fullName>
                <label>Procedure</label>
            </value>
            <value>
                <fullName>Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>