force-app/main/default/objects/Activity/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <label>Arrival Time</label>
    <type>DateTime</type>
</CustomField>