force-app/main/default/objects/Activity/fields/Assigned_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>