force-app/main/default/objects/Activity/fields/Assigned_Doctor_is_Me__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Doctor_is_Me__c</fullName>
    <formula>IF($User.Id = Assigned_Doctor__r.Internal_Doctor_Linkage__r.Id,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Doctor is Me</label>
    <type>Checkbox</type>
</CustomField>