force-app/main/default/objects/Activity/fields/Assigned_Too__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Too__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To Staff Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>