force-app/main/default/objects/Activity/fields/Birthdate_for_banner__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_for_banner__c</fullName>
    <description>Field for flow input</description>
    <label>Birthdate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>