force-app/main/default/objects/Activity/fields/Blood_Types__c.field-meta.xml
<CustomField>
    <fullName>Blood_Types__c</fullName>
    <label>Blood Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blood Onsite</fullName>
            </value>
            <value>
                <fullName>Blood Offsite</fullName>
            </value>
            <value>
                <fullName>Blood Tracking</fullName>
            </value>
            <value>
                <fullName>Scan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>