force-app/main/default/objects/Activity/fields/Book_Appointment_Choice__c.field-meta.xml
<CustomField>
    <fullName>Book_Appointment_Choice__c</fullName>
    <label>Book Appointment Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I want to book an Appointment</fullName>
            </value>
            <value>
                <fullName>I do not want to book an Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>