force-app/main/default/objects/Activity/fields/Calendar_Choice_Display__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Choice_Display__c</fullName>
    <label>Calendar Choice Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Notes</fullName>
            </value>
            <value>
                <fullName>Cycle On Event</fullName>
            </value>
            <value>
                <fullName>Manual Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>