force-app/main/default/objects/Activity/fields/Certificate_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Start_Date__c</fullName>
    <label>Certificate Start Date</label>
    <type>Date</type>
</CustomField>