force-app/main/default/objects/Activity/fields/Current_Cycle_Day__c.field-meta.xml
<CustomField>
    <fullName>Current_Cycle_Day__c</fullName>
    <label>Current Cycle Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>