force-app/main/default/objects/Activity/fields/Cycle_Sumo__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Sumo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle Sumo</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>