force-app/main/default/objects/Activity/fields/Daily_Weekly_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Daily_Weekly_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily/Weekly Tasks</label>
    <type>Checkbox</type>
</CustomField>