force-app/main/default/objects/Activity/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <formula>Linked_Result__r.Cycle__r.Contact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>