force-app/main/default/objects/Activity/fields/Day_of_Week_Num__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week_Num__c</fullName>
    <formula>DAY( ActivityDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Week (Num)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>