force-app/main/default/objects/Activity/fields/DLST_Activity_time__c.field-meta.xml
<CustomField>
    <fullName>DLST_Activity_time__c</fullName>
    <formula>IF(
  AND(
    DATEVALUE(ActivityDateTime) &gt;= DATE(YEAR(DATEVALUE(ActivityDateTime)), 10, 1) + CASE(
      MOD( DATE(YEAR(DATEVALUE(ActivityDateTime)), 10, 1) - DATE(1980,1,6),7), 
      0 ,0,
      1 ,6,
      2 ,5,
      3 ,4,
      4 ,3,
      5 ,2,
      6 ,1,
      NULL
    ),
    DATEVALUE(ActivityDateTime) &lt; DATE(YEAR(DATEVALUE(ActivityDateTime)), 4, 1) + CASE(
      MOD( DATE(YEAR(DATEVALUE(ActivityDateTime)), 4, 1) - DATE(1980,1,6),7),
      0 ,0,
      1 ,6,
      2 ,5,
      3 ,4,
      4 ,3,
      5 ,2,
      6 ,1,
      NULL
    )
  ),
  ActivityDateTime + 11/24, 
  ActivityDateTime + 10/24
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLST Activity time</label>
    <type>DateTime</type>
</CustomField>