force-app/main/default/objects/Activity/fields/Doctor_has_Commented__c.field-meta.xml
<CustomField>
    <fullName>Doctor_has_Commented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doctor has Commented</label>
    <type>Checkbox</type>
</CustomField>