force-app/main/default/objects/Activity/fields/Doctor_Intervention_Required__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Intervention_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doctor Intervention Required</label>
    <type>Checkbox</type>
</CustomField>