force-app/main/default/objects/Activity/fields/Doctor_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Mobile__c</fullName>
    <formula>IF(ISNULL( Linked_Result__r.Cycle__r.Doctor_Initiating_Cycle__r.Mobile__c ), VALUE(Linked_Result__r.Patients_or_Donors__r.Account.Doctor2__r.Mobile__c) ,VALUE(Linked_Result__r.Cycle__r.Doctor_Initiating_Cycle__r.Mobile__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctor Mobile</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>