force-app/main/default/objects/Activity/fields/Doctor_Name__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Name__c</fullName>
    <formula>Assigned_Doctor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctor Name</label>
    <type>Text</type>
</CustomField>