force-app/main/default/objects/Activity/fields/Doctors_Notes_Received__c.field-meta.xml
<CustomField>
    <fullName>Doctors_Notes_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doctors Notes Received</label>
    <type>Checkbox</type>
</CustomField>