force-app/main/default/objects/Activity/fields/Expected_Offsite_Blood_Location__c.field-meta.xml
<CustomField>
    <fullName>Expected_Offsite_Blood_Location__c</fullName>
    <label>Offsite Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>