force-app/main/default/objects/Activity/fields/GMail_Delete_Field__c.field-meta.xml
<CustomField>
    <fullName>GMail_Delete_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GMail Delete Field</label>
    <type>Checkbox</type>
</CustomField>