force-app/main/default/objects/Activity/fields/Healthfund__c.field-meta.xml
<CustomField>
    <fullName>Healthfund__c</fullName>
    <label>Healthfund</label>
    <length>50</length>
    <type>Text</type>
</CustomField>