force-app/main/default/objects/Activity/fields/Interview_Types__c.field-meta.xml
<CustomField>
    <fullName>Interview_Types__c</fullName>
    <label>Interview Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IVF Interview New</fullName>
            </value>
            <value>
                <fullName>IVF Interview Return</fullName>
            </value>
            <value>
                <fullName>FET Interview New</fullName>
            </value>
            <value>
                <fullName>FET Interview Return</fullName>
            </value>
            <value>
                <fullName>IUI Interview</fullName>
            </value>
            <value>
                <fullName>VOT Interview</fullName>
            </value>
            <value>
                <fullName>TESA Chat</fullName>
            </value>
            <value>
                <fullName>Drug Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>