force-app/main/default/objects/Activity/fields/Left_Voicemail__c.field-meta.xml
<CustomField>
    <fullName>Left_Voicemail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left Voicemail</label>
    <type>Checkbox</type>
</CustomField>