force-app/main/default/objects/Activity/fields/Linked_Result__c.field-meta.xml
<CustomField>
    <fullName>Linked_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Result</label>
    <referenceTo>Result__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>