force-app/main/default/objects/Activity/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <formula>Linked_Result__r.Cycle__r.Contact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>