force-app/main/default/objects/Activity/fields/Mobile_for_banner__c.field-meta.xml
<CustomField>
    <fullName>Mobile_for_banner__c</fullName>
    <label>Mobile</label>
    <length>12</length>
    <type>Text</type>
</CustomField>