force-app/main/default/objects/Activity/fields/Multi_Activity_Today__c.field-meta.xml
<CustomField>
    <fullName>Multi_Activity_Today__c</fullName>
    <label>Multi_Activity_Today</label>
    <length>255</length>
    <type>Text</type>
</CustomField>