force-app/main/default/objects/Activity/fields/Online_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Online_Appointment__c</fullName>
    <label>Online Appointment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compass</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>