force-app/main/default/objects/Activity/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Cycle_Sumo__c)),
    Cycle_Sumo__c,
    WhatId
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Name</label>
    <type>Text</type>
</CustomField>