force-app/main/default/objects/Activity/fields/Patients_Donors_Sumo__c.field-meta.xml
<CustomField>
    <fullName>Patients_Donors_Sumo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patients &amp; Donors Sumo</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>