force-app/main/default/objects/Activity/fields/PatientStatus__c.field-meta.xml
<CustomField>
    <fullName>PatientStatus__c</fullName>
    <label>Patient Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>