force-app/main/default/objects/Activity/fields/Procedure_Location__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Location__c</fullName>
    <label>Procedure Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Procedure_Locations</valueSetName>
    </valueSet>
</CustomField>