force-app/main/default/objects/Activity/fields/Procedure_Types__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Types__c</fullName>
    <label>Procedure Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EPU</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>FET</fullName>
            </value>
            <value>
                <fullName>Semen Collection</fullName>
            </value>
            <value>
                <fullName>Scratch Test</fullName>
            </value>
            <value>
                <fullName>TESA</fullName>
            </value>
            <value>
                <fullName>IUI</fullName>
            </value>
            <value>
                <fullName>Egg Thaw - VOT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>