force-app/main/default/objects/Activity/fields/Recurring_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Task_Type__c</fullName>
    <label>Recurring Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>