force-app/main/default/objects/Activity/fields/Results_Entered__c.field-meta.xml
<CustomField>
    <fullName>Results_Entered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Results Entered</label>
    <type>Checkbox</type>
</CustomField>