force-app/main/default/objects/Activity/fields/Scan_Types__c.field-meta.xml
<CustomField>
    <fullName>Scan_Types__c</fullName>
    <label>Scan Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compass Scan</fullName>
            </value>
            <value>
                <fullName>Sides Scan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>