force-app/main/default/objects/Activity/fields/Seen_Time__c.field-meta.xml
<CustomField>
    <fullName>Seen_Time__c</fullName>
    <label>Seen Time</label>
    <type>DateTime</type>
</CustomField>