force-app/main/default/objects/Activity/fields/Self_Check_In_Status__c.field-meta.xml
<CustomField>
    <fullName>Self_Check_In_Status__c</fullName>
    <description>Developer_Only, not to be included on page layouts.</description>
    <label>Self_Check_In_Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>