force-app/main/default/objects/Activity/fields/Staff_Member_is_Me__c.field-meta.xml
<CustomField>
    <fullName>Staff_Member_is_Me__c</fullName>
    <formula>IF( Assigned_Too__r.Id = $User.Id || Owner:User.Id = $User.Id  ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Member is Me</label>
    <type>Checkbox</type>
</CustomField>