force-app/main/default/objects/Activity/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Picklist2</fullName>
            </value>
            <value>
                <fullName>Picklist3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>