force-app/main/default/objects/Activity/fields/Sumo_Linked_Object__c.field-meta.xml
<CustomField>
    <fullName>Sumo_Linked_Object__c</fullName>
    <label>Sumo Linked Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>