force-app/main/default/objects/Activity/fields/sumoapp__AdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AdditionalInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SUMO Event</label>
    <referenceTo>sumoapp__AdditionalInfo__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>