force-app/main/default/objects/Activity/fields/sumoapp__LocationType__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LocationType__c</fullName>
    <label>Location Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>