force-app/main/default/objects/Activity/fields/sumoapp__OrganizerFullName__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__OrganizerFullName__c</fullName>
    <formula>BLANKVALUE(sumoapp__AdditionalInfo__r.sumoapp__AlternateHostName__c, (sumoapp__AdditionalInfo__r.sumoapp__Organizer__r.FirstName &amp; &apos; &apos; &amp; sumoapp__AdditionalInfo__r.sumoapp__Organizer__r.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organizer Full Name</label>
    <type>Text</type>
</CustomField>