force-app/main/default/objects/Activity/fields/sumoapp__OrganizerTitle__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__OrganizerTitle__c</fullName>
    <formula>sumoapp__AdditionalInfo__r.sumoapp__Organizer__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organizer Title</label>
    <type>Text</type>
</CustomField>