force-app/main/default/objects/Activity/fields/sumoapp__RecurringStartDate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RecurringStartDate__c</fullName>
    <label>Recurring Start Date</label>
    <type>Date</type>
</CustomField>