force-app/main/default/objects/Activity/fields/sumoapp__StartDateTimeTimezone__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__StartDateTimeTimezone__c</fullName>
    <label>Start DateTime Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>