force-app/main/default/objects/Activity/fields/sumoapp__SumoId__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__SumoId__c</fullName>
    <label>Sumo Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>